# RustyMailbox

./: .gitignore  docker-compose.yml
backend/: package-lock.json  package.json
backend/src/: db.ts  index.ts
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Wrapper.tsx
mailer/: Cargo.toml  Dockerfile
mailer/src/: handlers.rs  main.rs  routes.rs
