[package]
name = "rust_mailer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
dotenv = "0.15.0"
lettre = "0.10.4"
lettre_email = "0.9.4"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.1", features = ["cors"] }
